# MDAD

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: index.html
docs/assets/css/: style.css
docs/assets/js/: main.js
src/eval/: config.py  experiment_runner.py  main.py
src/eval/baselines/: __init__.py  base.py  utils.py
src/eval/cmad_datasets/: __init__.py  asvspoof2021.py  audiobook.py  base.py  emotional.py  in_the_wild.py  interview.py  movie.py  news.py  noisyspeech.py  partialfake.py  phonecall.py  podcast.py  publicfigure.py  publicspeech.py
src/eval/datasets/: __init__.py  audiobook.py  base.py  emotional.py  in_the_wild.py  interview.py  movie.py  news.py  noisyspeech.py  partialfake.py  phonecall.py  podcast.py  podcasts.py  public.py  publicfigure.py  publicspeech.py
src/eval/experiments/: __init__.py  base.py  cli.py  config.py  expr1.py  expr2.py  expr3.py  expr4.py  runner.py
src/eval/mdad_datasets/: asvspoof2021.py  audiobook.py  base.py  in_the_wild.py  noisyspeech.py  partialfake.py  phonecall.py
src/eval/subsets/: __init__.py  asvspoof2021.py  audiobook.py  base.py  emotional.py  interview.py  movie.py  news.py  noisyspeech.py  partialfake.py  phonecall.py  podcast.py  publicfigure.py  publicspeech.py
src/generation/: main.py
src/utils/: calculate_duration.py  clean_backup_files.py  create_splits_audiobook.py  create_splits_emotional.py  create_splits_general.py  create_splits_publicfigure.py  filter_dataset.py  generate_sample.py  reduce_dataset.py  resample_dataset.py  resume_meta.py
(+120 files in other folders)
