[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quadvox"
version = "0.1.0"
description = "QuadVox Benchmark"
readme = "README.md"
requires-python = ">=3.12"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/wtalioy/QuadVox"

[project.scripts]
quadvox-run = "eval.test_protocol.cli:main"
quadvox-eval = "eval.main:main"
quadvox-generate = "generation.main:main"

[tool.setuptools.packages.find]
where = ["src"]
